[package]
name = "r8"
description = "A CHIP-8 interpreter made with Rust, Pixels and Winit."
keywords = ["gamedev", "chip-8", "emulators", "interpreters"]
categories = ["emulators", "game-development"]
version = "0.1.0"
edition = "2021"
authors = ["Luiz F. A. de Prá <rawarkanis@gmail.com>"]
readme = "../README.md"
homepage = "https://github.com/luizdepra/r8"
repository = "https://github.com/luizdepra/r8"
license = "MIT"


[dependencies]
anyhow = "^1.0.57"
env_logger = "^0.10.0"
clap = { version = "^4.0.32", features = ["derive"] }
cpal = "^0.14.2"
log = "^0.4.17"
pixels = "^0.11.0"
thiserror = "^1.0.38"
winit = "^0.27.5"
winit_input_helper = "^0.13.0"
r8lib = { version = "^0.1.0", path = "../r8lib" }
