[package]
name = "r8lib"
version = "0.1.0"
description = "A library for CHIP-8 interpreters development."
keywords = ["gamedev", "chip-8", "emulators", "interpreters"]
categories = ["emulators", "game-development"]
edition = "2021"
authors = ["Luiz F. A. de Prá <rawarkanis@gmail.com>"]
readme = "../README.md"
homepage = "https://github.com/luizdepra/r8"
repository = "https://github.com/luizdepra/r8"
license = "MIT"

[dependencies]
rand = "^0.8.6"
log = "^0.4.17"
